--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -201,7 +201,7 @@ TEX_mexican_intervention:0 "Mexican Intervention"
 TEX_mexican_intervention_desc:0 ""
 TEX_central_intervention:0 "Intervention in Central America"
 TEX_central_intervention_desc:0 ""
-TEX_panaman_intervention:0 "Panama Intervention"
+TEX_panaman_intervention:0 "Panamá Intervention"
 TEX_panaman_intervention_desc:0 ""
 TEX_pax_american:0 "Pax Americana"
 TEX_pax_american_desc:0 ""
@@ -325,9 +325,9 @@ LONG_DOCTRINE:0 "Long Doctrine"
 CAL_TEX_COEXISTS:0 "Texas want to coexist with us"
 CAL_MEX_COEXISTS:0 "Texas want to coexist with us"
 TEX_VOL_GER:0 "AUS Voluntaries to Germany"
-TEX_DEM_PAN:0 "The AUS demand Panama Canal Zone"
-CAN_CEDES_PAN:0 "Canada returns Panama Canal"
-CAN_NO_CEDES_PAN:0 "Canada don't returns the Panama Canal"
+TEX_DEM_PAN:0 "The AUS demand Panamá Canal Zone"
+CAN_CEDES_PAN:0 "Canada returns Panamá Canal"
+CAN_NO_CEDES_PAN:0 "Canada don't returns the Panamá Canal"
 
 ### Events ###
 unionstate.1.t:0 "Foundation of the Union State"
@@ -522,11 +522,11 @@ unionstate.52.t:0 "Aid from the AUS!"
 unionstate.52.d:0 "The American Union State, fearing Syndicalist dominance over Europe, decided to support our armed struggle with large amounts of military supplies and volunteers eager to see Syndicalism crushed."
 unionstate.52.a:0 "Better than nothing!"
 unionstate.53.t:0 "Our place in the sun"
-unionstate.53.d:0 "The occupation of American overseas territory by foreign powers during the Civil War was an affront to the Union State. The establishment of Canadian authority over the Panama Canal Zone, however, was a provocation that could not be overlooked. The victorious government now looked to restore those lands seized by their neighbour to the north."
+unionstate.53.d:0 "The occupation of American overseas territory by foreign powers during the Civil War was an affront to the Union State. The establishment of Canadian authority over the Panamá Canal Zone, however, was a provocation that could not be overlooked. The victorious government now looked to restore those lands seized by their neighbour to the north."
 unionstate.53.a:0 "Demand the return of the canal zone!"
 unionstate.53.b:0 "Our concern is elsewhere"
 unionstate.54.t:0 "The Demands of the American Union State"
-unionstate.54.d:0 "The victorious government of the American Union State has requested we return control of the Panama Canal back to them."
+unionstate.54.d:0 "The victorious government of the American Union State has requested we return control of the Panamá Canal back to them."
 unionstate.54.a:0 "We must comply"
 unionstate.54.b:0 "They'll get over it"
 unionstate.55.t:0 "The Return of the Canal Zone"
@@ -670,17 +670,17 @@ unionstate.227.t:0 "United Provinces Refuse"
 unionstate.227.d:0 "The United Provinces have refused to sign a genius treaty. We should have expected such stupidity from the Central Americans."
 unionstate.227.a:0 "Stupid United Provinces"
 unionstate.228.t:0 "Treaty with America?"
-unionstate.228.d:0 "The United states have come with a treaty to improve relations between our two nations. Such a treaty will improve the trade relations and offer a guarantee of protection for Panama. It would be foolish to say no to such an arrangement but others fear binding ourselves to the Americans. "
+unionstate.228.d:0 "The United states have come with a treaty to improve relations between our two nations. Such a treaty will improve the trade relations and offer a guarantee of protection for Panamá. It would be foolish to say no to such an arrangement but others fear binding ourselves to the Americans. "
 unionstate.228.a:0 "Let us Join the League of American States"
 unionstate.228.b:0 "Sign the protection treaty"
 unionstate.228.c:0 "Refuse the Treaty!"
-unionstate.229.t:0 "Panama Joins the League of the American States"
-unionstate.229.d:0 "Panama have accepted our treaty and joined the League of American States. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Panama."
+unionstate.229.t:0 "Panamá Joins the League of the American States"
+unionstate.229.d:0 "Panamá have accepted our treaty and joined the League of American States. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Panamá."
 unionstate.229.a:0 "Good News!"
-unionstate.230.t:0 "Friendly Panama"
-unionstate.230.d:0 "The Panamanians have accepted our treaty. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Panama."
+unionstate.230.t:0 "Friendly Panamá"
+unionstate.230.d:0 "The Panamanians have accepted our treaty. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Panamá."
 unionstate.230.a:0 "Pleasure doing business	"
-unionstate.231.t:0 "Panama Refuse"
+unionstate.231.t:0 "Panamá Refuse"
 unionstate.231.d:0 "Panamas has refused to sign a genius treaty. We should have expected such stupidity from the Panamanians"
 unionstate.231.a:0 "Stupid Panamanians"
 unionstate.232.t:0 "Treaty with America?"
