--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -540,8 +540,8 @@ annex.140.t:0 "The Fate of the Caribbean Federation"
 annex.140.d:0 "After a long campaign all across the Caribbean Sea, we have finally managed to shatter the Caribbean defences. West Guyana is now in our hands! We must now decide on the future of the Caribbean Federation."
 annex.140.a:0 "Liberate the Caribbean Federation under a friendly government!"
 annex.140.b:0 "Continue with military occupation!"
-annex.141.t:0 "The Fate of Panama"
-annex.141.d:0 "After a rapid campaign around the Panama Canal, we have finally managed to shatter the Panamanian defences. Panamá City is now in our hands! We must now decide on the future of Panama."
+annex.141.t:0 "The Fate of Panamá"
+annex.141.d:0 "After a rapid campaign around the Panamá Canal, we have finally managed to shatter the Panamanian defences. Panamá City is now in our hands! We must now decide on the future of Panamá."
 annex.141.a:0 "Liberate Panamá under a friendly government!"
 annex.141.b:0 "Continue with military occupation!"
 annex.142.t:0 "The Fate of Haiti"
