--- a/localisation/KR_Colombia_l_english.yml
+++ b/localisation/KR_Colombia_l_english.yml
@@ -246,12 +246,12 @@ COL_closer_ties_venezuela:0 "Closer Ties With Venezuela"
 COL_closer_ties_venezuela_desc:0 "Let us establish close trade and economical ties with Venezuela, making the Andean Pact more than a military alliance"
 COL_develop_venezuela:0 "Invest in Venezuela"
 COL_develop_venezuela_desc:0 "Let us use our economic clout on Venezuela to help them industrialise, an also to strengthen the Andean Pact as a whole"
-COL_rescue_panama:0 "Rescue Panama"
-COL_rescue_panama_desc:0 "Panama is about to fall to Syndicalism, we must act quickly and reclaim them to the homeland!"
-COL_closer_ties_panama:0 "Panama Investments"
+COL_rescue_panama:0 "Rescue Panamá"
+COL_rescue_panama_desc:0 "Panamá is about to fall to Syndicalism, we must act quickly and reclaim them to the homeland!"
+COL_closer_ties_panama:0 "Panamá Investments"
 COL_closer_ties_panama_desc:0 "Let us prove the the Panamanians that we do have their best interests in mind"
 COL_pacify_local_elites_panama:0 "Pacify Local Elites"
-COL_pacify_local_elites_panama_desc:0 "The local elites still cling to the illusion that the USA will make them masters of Panama again. Let us remind them the US is in no position to do so"
+COL_pacify_local_elites_panama_desc:0 "The local elites still cling to the illusion that the USA will make them masters of Panamá again. Let us remind them the US is in no position to do so"
 COL_phoenix:0 "New Granadan Phoenix"
 COL_phoenix_desc:0 "Like a phoenix, from the ashes, Gran Colombia is re born all but in name. A federation is what already exists, and we shall make it an official fact"
 COL_reclamation:0 "Reclaim our Legacy"
@@ -270,12 +270,12 @@ COL_venezuela_pacify:0 "Pacify Venezuela"
 COL_venezuela_pacify_desc:0 "We must now integrate Venezuela into Greater Colombia, and show them how they are our equals in our struggle"
 COL_venezuela_enrich:0 "Enrich Venezuela"
 COL_venezuela_enrich_desc:0 "Now, we must invest in the industry of the new provinces in former Venezuela to show the populace the benefits of our rule"
-COL_panama_crush:0 "Conquer Panama"
-COL_panama_crush_desc:0 "We must end the imperialist charade that is Panama"
-COL_panama_pacify:0 "Pacify Panama"
-COL_panama_pacify_desc:0 "Now Panama will learn who their true masters are; regardless of the elites, the people will see us as legitimate"
-COL_panama_enrich:0 "Enrich Panama"
-COL_panama_enrich_desc:0 "Now, we must invest in Panama and reward the loyalty of the common folk"
+COL_panama_crush:0 "Conquer Panamá"
+COL_panama_crush_desc:0 "We must end the imperialist charade that is Panamá"
+COL_panama_pacify:0 "Pacify Panamá"
+COL_panama_pacify_desc:0 "Now Panamá will learn who their true masters are; regardless of the elites, the people will see us as legitimate"
+COL_panama_enrich:0 "Enrich Panamá"
+COL_panama_enrich_desc:0 "Now, we must invest in Panamá and reward the loyalty of the common folk"
 COL_crusade_against_syndi:0 "The Crusade Against Syndicalism"
 COL_crusade_against_syndi_desc:0 "The goal of our expansion is simple: to save the common folk from the lies and the atheism of Syndicalism"
 COL_national_defense_comitee:0 "National Defence Committee"
@@ -325,7 +325,7 @@ COL_totalist_party_long:0 "Unión Totalista Colombiana"
 
 ### Events ###
 col.1.t:0 "Colombia's Place in the World"
-col.1.d:0 "Weakened by civil wars (especially 1899 - 1903), Colombia had to acknowledge U.S. rights of control of the Panama Canal in the Hay-Bunan-Varilla Treaty of 1903, ending the conflict between the two countries about the building of the Canal. When the Colombian Congress denied to ratify the treaty the United States forced the secession of Panama from Colombia, compensating them between 1921 and 1930 with a payment of a total 25 million Dollars. Colombia formally recognised Panama in 1921. The conservatives pursued the modernisation of the country, expanding the railroad network. Since 1850 Colombia had been exporting tobacco, after 1900 coffee and bananas were added (with the aid of U.S. capital), after 1905 petroleum. The liberals formed a government in 1930 which enacted a land reform, dispossessing big landowners, and social reforms, with economic benefits for the middle class, the workers' class and the peasants."
+col.1.d:0 "Weakened by civil wars (especially 1899 - 1903), Colombia had to acknowledge U.S. rights of control of the Panamá Canal in the Hay-Bunan-Varilla Treaty of 1903, ending the conflict between the two countries about the building of the Canal. When the Colombian Congress denied to ratify the treaty the United States forced the secession of Panamá from Colombia, compensating them between 1921 and 1930 with a payment of a total 25 million Dollars. Colombia formally recognised Panamá in 1921. The conservatives pursued the modernisation of the country, expanding the railroad network. Since 1850 Colombia had been exporting tobacco, after 1900 coffee and bananas were added (with the aid of U.S. capital), after 1905 petroleum. The liberals formed a government in 1930 which enacted a land reform, dispossessing big landowners, and social reforms, with economic benefits for the middle class, the workers' class and the peasants."
 col.1.a:0 "Whatever the future holds, we stand united"
 col.2.t:0 "The 1938 Presidential election: Colombia at a Crossroads"
 col.2.d:0 "This year's Presidential election has begun and while it's predicted that the Liberal Party will continue control of the Presidency, the Conservative party can just as well win the post. More extreme factions from both sides have splintered and are also running, the corporatist Los Leopardos and the leftist UNIR, led by the charismatic Jorge Eliécer Gaitán, and sporadic violence between these factions have emerged. From the sidelines, Gustavo Rojas Pinilla, fresh returned from his trip to Mittleurpa to secure defence contracts, worryingly believes that the very fabric of the Republic may be at risk... "
@@ -365,14 +365,14 @@ col.10.t:0 "Venezuela refuses!"
 col.10.t:0 "Utter lunacy seems to have taken a grip of the Caracas government, for they now are taking arms against us, considering our generous offer a threat"
 col.10.t:0 "They must be drinking oil! To Arms!"
 col.11.t:0 "Colombian Ultimatum!?"
-col.11.d:0 "The government of 'Gran' Colombia has issued an Ultimatum! They demand that Panama joins the Gran Colombia, else a state of war between our countries will begin. What should we do?"
+col.11.d:0 "The government of 'Gran' Colombia has issued an Ultimatum! They demand that Panamá joins the Gran Colombia, else a state of war between our countries will begin. What should we do?"
 col.11.a:0 "We have no choice, their armies are too vast. For the good of the people, we surrender"
 col.11.b:0 "We will never submit to such vile threats! To Arms!"
-col.12.t:0 "Panama joins the federation"
-col.12.d:0 "Rather than be crushed by our might, the imperialists folded and Panama belongs to us again"
+col.12.t:0 "Panamá joins the federation"
+col.12.d:0 "Rather than be crushed by our might, the imperialists folded and Panamá belongs to us again"
 col.12.a:0 "As planned"
 col.13.t:0 "Ultimatum Refused!"
-col.13.d:0 "Yet again, the fake country of Panama stands between Colombia and progress. They will live to pay for their mistakes!"
+col.13.d:0 "Yet again, the fake country of Panamá stands between Colombia and progress. They will live to pay for their mistakes!"
 col.13.a:0 "They will be crushed!"
 col.14.t:0 "A Stable Democracy"
 col.14.d:0 "Our victory in the next election is guaranteed, some ask if it will even happen. They do grant us an air of extra legitimacy. However, we should extend an olive branch to the moderate Liberales, who clearly didn't know better than to join our coalition beforehand. Such an alliance will vastly expand our political clout"
