--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -338,10 +338,10 @@ CSA_mexican_american_trade_agreement:0 "Mexican-American Trade Agreement"
 CSA_mexican_american_trade_agreement_desc:0 "It has been proposed that we build a trade agreement with the Mexican. Such a trade agreement would be designed to support the workers in both America and Mexico. We are both comrades after all and both America and Mexico have workers that move across the border for work, particularly in the south west. Such an agreement would help the workers of both countries. "
 CSA_help_centro_america:0 "Help Central America"
 CSA_help_centro_america_desc:0 "It is our duty and right as Americans to help our comrades in Central America fight off the capitalists and reactionaries in the United Provinces. Where we once intervened to help the capitalists in Central America, now we shall intervene to help the workers! "
-CSA_panama_crisis:0 "The Panama Crisis"
-CSA_panama_crisis_desc:0 "Now that the United Provinces are defeated, there is the question of Panama and the canal there. It might be good to create a crisis in Panama to decide their fate. We should also figure out what to do about the Canal, and whom should own it. "
-CSA_fate_of_panama:0 "Fate of Panama"
-CSA_fate_of_panama_desc:0 "Now that Panama has been dealt with, the question of what its fate shall be is brought up, specifically the questions are all about the fate of the Canal. Should it be given back to Panama, or given over to Central America? Or perhaps instead, we should keep it since it was built by Americans."
+CSA_panama_crisis:0 "The Panamá Crisis"
+CSA_panama_crisis_desc:0 "Now that the United Provinces are defeated, there is the question of Panamá and the canal there. It might be good to create a crisis in Panamá to decide their fate. We should also figure out what to do about the Canal, and whom should own it. "
+CSA_fate_of_panama:0 "Fate of Panamá"
+CSA_fate_of_panama_desc:0 "Now that Panamá has been dealt with, the question of what its fate shall be is brought up, specifically the questions are all about the fate of the Canal. Should it be given back to Panamá, or given over to Central America? Or perhaps instead, we should keep it since it was built by Americans."
 CSA_join_international:0 "Join the International"
 CSA_join_international_desc:0 "It is time for America to take her place on the world's stage and join the International and fight for worker's rights world wide."
 CSA_arsenal_of_syndicalism:0 "Arsenal of Syndicalism"
@@ -741,19 +741,19 @@ combinedsyndicates.231.t:0 "Revolutionary Thanks"
 combinedsyndicates.231.d:0 "With our revolution successful. We should work to rebuild the relations with America. While the old regime of America supported the dictators and corrupt presidents, the new revolutionary America has changed tune and working towards supporting the people throughout the Americas. "
 combinedsyndicates.231.a:0 "Gracias Camaradas!"
 
-combinedsyndicates.232.t:0 "A Revolution in Panama?"
-combinedsyndicates.232.d:0 "The country of Panama lays under control of corrupt capitalist leaders. The conditions of the Panamanian people are horrible and a number of syndicalist leaders have come America seeking our help in supporting a revolution in the Panama that can oust the corrupt regime and put the people into power. "
+combinedsyndicates.232.t:0 "A Revolution in Panamá?"
+combinedsyndicates.232.d:0 "The country of Panamá lays under control of corrupt capitalist leaders. The conditions of the Panamanian people are horrible and a number of syndicalist leaders have come America seeking our help in supporting a revolution in the Panamá that can oust the corrupt regime and put the people into power. "
 combinedsyndicates.232.a:0 "Let us help our Dominican Comrades!"
 combinedsyndicates.233.t:0 "Syndicalist Uprising!"
-combinedsyndicates.233.d:0 "Numerous rebel groups have risen up throughout Panama, notably with exiled syndicalists landing in the Bay of Pigs just 70 kilometres west of the city of Cienfuegos. Many point the finger at the revolutionary Americans for aiding the syndicalists. The Army is marching out to meet the rebel forces but will they be victorious?"
+combinedsyndicates.233.d:0 "Numerous rebel groups have risen up throughout Panamá, notably with exiled syndicalists landing in the Bay of Pigs just 70 kilometres west of the city of Cienfuegos. Many point the finger at the revolutionary Americans for aiding the syndicalists. The Army is marching out to meet the rebel forces but will they be victorious?"
 combinedsyndicates.233.a:0 "Panamanian Revolutionaries are victorious!"
 combinedsyndicates.233.b:0 "The Panamanian Army smashes the rebels!"
 combinedsyndicates.234.t:0 "Panamanian Revolution is victorious!"
-combinedsyndicates.234.d:0 "We have received word from Panama that the revolution is successful. A new government by the Panamanian People is in Power. One less country in the Caribbean is enslaved by capitalism."
+combinedsyndicates.234.d:0 "We have received word from Panamá that the revolution is successful. A new government by the Panamanian People is in Power. One less country in the Caribbean is enslaved by capitalism."
 combinedsyndicates.234.a:0 "Great Work Comrades!"
 combinedsyndicates.235.t:0 "Panamanian Revolution has failed"
-combinedsyndicates.235.d:0 "We have received word from Panama that the revolution has failed. Despite the great valour of our comrades in Panama, the Army was able to smash them and many are wondering if America should retaliate and smash Capitalism in America ourselves or if we should just let it be for now."
-combinedsyndicates.235.a:0 "We shall go to Panama and Liberate the Panamanians!"
+combinedsyndicates.235.d:0 "We have received word from Panamá that the revolution has failed. Despite the great valour of our comrades in Panamá, the Army was able to smash them and many are wondering if America should retaliate and smash Capitalism in America ourselves or if we should just let it be for now."
+combinedsyndicates.235.a:0 "We shall go to Panamá and Liberate the Panamanians!"
 combinedsyndicates.235.b:0 "It is not worth a war over"
 combinedsyndicates.236.t:0 "Revolutionary Thanks"
 combinedsyndicates.236.d:0 "With our revolution successful. We should work to rebuild the relations with America. While the old regime of America supported the dictators and corrupt presidents, the new revolutionary America has changed tune and working towards supporting the people throughout the Americas. "
@@ -762,7 +762,7 @@ combinedsyndicates.236.a:0 "Gracias Camaradas!"
 combinedsyndicates.237.t:0 "Fate of the Canal?"
 combinedsyndicates.237.d:0 "With control of the Canal in our hands the question is now what to do with it. Some suggest that we should give it to Centroamérica, while others suggest that we give it to the Panamanians. While others suggest that we should keep it since it was built by Americans. "
 combinedsyndicates.237.a:0 "Give it to Centroamérica"
-combinedsyndicates.237.b:0 "Give it to Panama"
+combinedsyndicates.237.b:0 "Give it to Panamá"
 combinedsyndicates.237.c:0 "Keep it"
 combinedsyndicates.238.t:0 "America has given us the Canal"
 combinedsyndicates.238.d:0 "The American have given us the canal. This is a great day for people throughout central America. "
