--- a/localisation/KR_Commune_of_France_l_english.yml
+++ b/localisation/KR_Commune_of_France_l_english.yml
@@ -478,7 +478,7 @@ FRA_Develop_South_America_desc:0 "Our South American comrades have applied to jo
 FRA_Develop_Bhartiyan_Commune:0 "Develop the Bharatiya Commune"
 FRA_Develop_Bhartiyan_Commune_desc:0 "Our Indian comrades have applied to join the Phalanstère International. With socialism in India facing the imperialists in Delhi and the reactionaries in the Federation, it is only proper to help our comrades in their struggle."
 FRA_Develop_Central_america:0 "Develop our Central American Brothers"
-FRA_Develop_Central_america_desc:0 "Our Mexican and Centroamérican comrades have applied to join the Phalanstère International. With socialism in Mexico bordering the increasingly unstable USA and the one in Centroamérica ready to advance towards the Panama Canal, it is only proper to help our comrades in their struggle."
+FRA_Develop_Central_america_desc:0 "Our Mexican and Centroamérican comrades have applied to join the Phalanstère International. With socialism in Mexico bordering the increasingly unstable USA and the one in Centroamérica ready to advance towards the Panamá Canal, it is only proper to help our comrades in their struggle."
 FRA_Develop_Ukraine:0 "Develop Ukraine"
 FRA_Develop_Ukraine_desc:0 "Our Ukrainian comrades have applied to join the Phalanstère International. With socialism in Ukraine bordering the resurgent and hostile Russia and the constantly hostile Germany, it is only proper to help our comrades in their struggle."
 
@@ -960,7 +960,7 @@ comfrance.111.a:0 "We shall unite Latin America up to the Canal!"
 comfrance.111.b:0 "We are content as we are for now"
 
 comfrance.112.t:0 "Centroamérica announces her ambitions"
-comfrance.112.d:0 "Centroamérican delegate has just announced his country's plan for expansion towards the Panama Canal. Should it fall into our hands, the Socialists' position in the world would greatly improve."
+comfrance.112.d:0 "Centroamérican delegate has just announced his country's plan for expansion towards the Panamá Canal. Should it fall into our hands, the Socialists' position in the world would greatly improve."
 comfrance.112.a:0 "Good luck, comrades!"
 
 comfrance.113.t:0 "Brazil - Bolivia alliance"
