--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -4805,36 +4805,36 @@ PLC_national_populist:0 "Polish-Lithuanian Empire"
 PLC_national_populist_ADJ:0 "Polish-Lithuanian"
 PLC_national_populist_DEF:0 "The Polish-Lithuanian Empire"
 
-PNM_totalist:0 "Socialist Republic of Panama"
+PNM_totalist:0 "Socialist Republic of Panamá"
 PNM_totalist_ADJ:0 "Panamanian"
-PNM_totalist_DEF:0 "The Socialist Republic of Panama"
-PNM_syndicalist:0 "Socialist Republic of Panama"
+PNM_totalist_DEF:0 "The Socialist Republic of Panamá"
+PNM_syndicalist:0 "Socialist Republic of Panamá"
 PNM_syndicalist_ADJ:0 "Panamanian"
-PNM_syndicalist_DEF:0 "The Socialist Republic of Panama"
-PNM_radical_socialist:0 "Socialist Republic of Panama"
+PNM_syndicalist_DEF:0 "The Socialist Republic of Panamá"
+PNM_radical_socialist:0 "Socialist Republic of Panamá"
 PNM_radical_socialist_ADJ:0 "Panamanian"
-PNM_radical_socialist_DEF:0 "The Socialist Republic of Panama"
-PNM_social_democrat:0 "Panama"
+PNM_radical_socialist_DEF:0 "The Socialist Republic of Panamá"
+PNM_social_democrat:0 "Panamá"
 PNM_social_democrat_ADJ:0 "Panamanian"
-PNM_social_democrat_DEF:0 "Panama"
-PNM_social_liberal:0 "Panama"
+PNM_social_democrat_DEF:0 "Panamá"
+PNM_social_liberal:0 "Panamá"
 PNM_social_liberal_ADJ:0 "Panamanian"
-PNM_social_liberal_DEF:0 "Panama"
-PNM_market_liberal:0 "Panama"
+PNM_social_liberal_DEF:0 "Panamá"
+PNM_market_liberal:0 "Panamá"
 PNM_market_liberal_ADJ:0 "Panamanian"
-PNM_market_liberal_DEF:0 "Panama"
-PNM_social_conservative:0 "Panama"
+PNM_market_liberal_DEF:0 "Panamá"
+PNM_social_conservative:0 "Panamá"
 PNM_social_conservative_ADJ:0 "Panamanian"
-PNM_social_conservative_DEF:0 "Panama"
-PNM_authoritarian_democrat:0 "Panama"
+PNM_social_conservative_DEF:0 "Panamá"
+PNM_authoritarian_democrat:0 "Panamá"
 PNM_authoritarian_democrat_ADJ:0 "Panamanian"
-PNM_authoritarian_democrat_DEF:0 "Panama"
-PNM_paternal_autocrat:0 "Panama"
+PNM_authoritarian_democrat_DEF:0 "Panamá"
+PNM_paternal_autocrat:0 "Panamá"
 PNM_paternal_autocrat_ADJ:0 "Panamanian"
-PNM_paternal_autocrat_DEF:0 "Panama"
-PNM_national_populist:0 "Panama"
+PNM_paternal_autocrat_DEF:0 "Panamá"
+PNM_national_populist:0 "Panamá"
 PNM_national_populist_ADJ:0 "Panamanian"
-PNM_national_populist_DEF:0 "Panama"
+PNM_national_populist_DEF:0 "Panamá"
 
 POL_totalist:0 "Polish Socialist Republic"
 POL_totalist_ADJ:0 "Socialist-Polish"
