--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -303,7 +303,7 @@ STATE_300:0 "Uruguay"
 STATE_301:0 "Paraguay"
 STATE_302:0 "La Paz"
 STATE_303:0 "Lima"
-STATE_304:0 "Panama City"
+STATE_304:0 "Panamá City"
 STATE_305:0 "Ecuador"
 STATE_306:0 "Cundinamarca"
 STATE_307:0 "Llanos"
@@ -684,7 +684,7 @@ STATE_681:0 "Cape"
 STATE_682:0 "Northern Ontario"
 STATE_683:1 "Nord du Quebec"
 STATE_684:0 "Karolinen"
-STATE_685:0 "Panama Canal"
+STATE_685:0 "Panamá Canal"
 STATE_686:0 "Puerto Rico"
 STATE_687:0 "West Guyana"
 STATE_688:0 "Chaco Boreal"
