--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -12,7 +12,7 @@ USA_presidential_election_tooltip:0 "The elections have gone ahead..."
 USA_reconstruction_tooltip:0 "The civil war is over, time to rebuild America."
 USA_civil_economy_tooltip:0 "Prepare the economy for civil war!"
 USA_united_provinces_invitation_tooltip:0 "We must make sure that the United Provinces is loyal and remains friendly to our interests and doesn't get overrun by syndicalism from Centroamérica."
-USA_panaman_invention_tooltip:0 "We must make sure that Panama is loyal and remains friendly to our interests and doesn't get overrun by syndicalism from Centroamérica."
+USA_panaman_invention_tooltip:0 "We must make sure that Panamá is loyal and remains friendly to our interests and doesn't get overrun by syndicalism from Centroamérica."
 USA_cuban_invitation_tooltip:0 "Cuba lies within the American Pond of the Caribbean. It is in our interests to make sure that Cuba remains friendly to the United States and our interests. "
 USA_haitian_invitation_tooltip:0 "Haiti lies within the American Pond of the Caribbean. It is in our interests to make sure that Haiti remains friendly to the United States and our interests. "
 USA_dominican_invitation_tooltip:0 "The Dominican Republic lies within the American Pond of the Caribbean. It is in our interests to make sure that The Dominican Republic remains friendly to the United States and our interests."
@@ -309,7 +309,7 @@ USA_mexican_intervention:0 "Mexican Intervention"
 USA_mexican_intervention_desc:0 "We should look at dealing with the Mexicans and making sure that they are loyal to us. A syndicalist country on our borders will not do. We have neglected dealing with them for far too long. "
 USA_central_intervention:0 "Intervention in Central America"
 USA_central_intervention_desc:0 "Central America under Sandino threatens our influence and interests in the region. We must deal with him and his band of syndicalists that threaten America's Interests in the region. We shall come to the aid of our allies in the United Provinces. "
-USA_panaman_intervention:0 "Invention in Panama"
+USA_panaman_intervention:0 "Invention in Panamá"
 USA_panaman_intervention_desc:0 "There is chaos in panama and the Canal could be lost to Syndicalists. Let us do everything we can to keep our interests safe in Central America. "
 USA_cuban_intervention:0 "Cuban Intervention"
 USA_cuban_intervention_desc:0 "We must make sure that Cuba remains friendly loyal to the US interest. We do not want syndicalism in America's backyard. "
@@ -1611,11 +1611,11 @@ usforeign.13.a:0 "We'll retake it one way or another!"
 usforeign.13.b:0 "Back off..."
 
 usforeign.14.t:0 "Our place in the sun"
-usforeign.14.d:0 "The occupation of American overseas territory by foreign powers during the Civil War was an affront to the United States. The establishment of Canadian authority over the Panama Canal Zone, however, was a provocation that could not be overlooked. The victorious government now looked to restore those lands seized by their neighbour to the north."
+usforeign.14.d:0 "The occupation of American overseas territory by foreign powers during the Civil War was an affront to the United States. The establishment of Canadian authority over the Panamá Canal Zone, however, was a provocation that could not be overlooked. The victorious government now looked to restore those lands seized by their neighbour to the north."
 usforeign.14.a:0 "Demand the return of the canal zone!"
 usforeign.14.b:0 "Our concern is elsewhere"
 usforeign.15.t:0 "The United States' request"
-usforeign.15.d:0 "The victorious government of the United States has requested we return control of the Panama Canal back to them."
+usforeign.15.d:0 "The victorious government of the United States has requested we return control of the Panamá Canal back to them."
 usforeign.15.a:0 "We must comply"
 usforeign.15.b:0 "They'll get over it"
 usforeign.16.t:0 "The United States' request"
@@ -1703,17 +1703,17 @@ usforeign.227.t:0 "United Provinces Refuse"
 usforeign.227.d:0 "The United Provinces have refused to sign a genius treaty. We should have expected such stupidity from the Central Americans."
 usforeign.227.a:0 "Stupid United Provinces"
 usforeign.228.t:0 "Treaty with America?"
-usforeign.228.d:0 "The United states have come with a treaty to improve relations between our two nations. Such a treaty will improve the trade relations and offer a guarantee of protection for Panama. It would be foolish to say no to such an arrangement but others fear binding ourselves to the Americans. "
+usforeign.228.d:0 "The United states have come with a treaty to improve relations between our two nations. Such a treaty will improve the trade relations and offer a guarantee of protection for Panamá. It would be foolish to say no to such an arrangement but others fear binding ourselves to the Americans. "
 usforeign.228.a:0 "Let us Join the League of American States"
 usforeign.228.b:0 "Sign the protection treaty"
 usforeign.228.c:0 "Refuse the Treaty!"
-usforeign.229.t:0 "Panama Joins the League of the American States"
-usforeign.229.d:0 "Panama have accepted our treaty and joined the League of American States. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Panama."
+usforeign.229.t:0 "Panamá Joins the League of the American States"
+usforeign.229.d:0 "Panamá have accepted our treaty and joined the League of American States. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Panamá."
 usforeign.229.a:0 "Good News!"
-usforeign.230.t:0 "Friendly Panama"
-usforeign.230.d:0 "The Panamanians have accepted our treaty. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Panama."
+usforeign.230.t:0 "Friendly Panamá"
+usforeign.230.d:0 "The Panamanians have accepted our treaty. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Panamá."
 usforeign.230.a:0 "Pleasure doing business	"
-usforeign.231.t:0 "Panama Refuse"
+usforeign.231.t:0 "Panamá Refuse"
 usforeign.231.d:0 "Panamas has refused to sign a genius treaty. We should have expected such stupidity from the Panamanians"
 usforeign.231.a:0 "Stupid Panamanians"
 usforeign.232.t:0 "Treaty with America?"
