--- a/localisation/KR_United_Kingdom_l_english.yml
+++ b/localisation/KR_United_Kingdom_l_english.yml
@@ -159,7 +159,7 @@ UK_nafta:0 "N.A.F.T.A."
 UK_nafta_desc:0 ""
 UK_carribbean:0 "Deal with the Carribbean Federation"
 UK_carribbean_desc:0 ""
-UK_panama:0 "Secure the Panama Canal"
+UK_panama:0 "Secure the Panamá Canal"
 UK_panama_desc:0 ""
 UK_australasia:0 "Deal with the Australasian Federation"
 UK_australasia_desc:0 ""
