--- a/localisation/adjacency_rules_l_english.yml
+++ b/localisation/adjacency_rules_l_english.yml
@@ -13,6 +13,6 @@ PERMISSION_DESC:0 " - Armies can pass: $ARMY$\n - Navies can pass: $NAVY$\n - Su
 SUEZ_CANAL:0 "Suez canal"
 GIBRALTAR_STRAIT:0 "Gibraltar Strait"
 DANISH_BELTS_STRAIT:0 "The Danish Belts"
-PANAMA_CANAL:0 "Panama Canal"
+PANAMA_CANAL:0 "Panamá Canal"
 KIEL_CANAL:0 "Kiel Canal"
 BOSPHORUS_STRAIT:0 "Bosphorus Strait"
