--- a/localisation/focus_l_english.yml
+++ b/localisation/focus_l_english.yml
@@ -754,9 +754,9 @@ USA_expand_the_USMC_desc:0 "The United States Marine Corps have been a decisive 
 USA_reinforce_monroe_doctrine:0 "Reaffirm Monroe Doctrine"
 USA_reinforce_monroe_doctrine_desc:0 "Dating over a 100 years back, the Monroe Doctrine codified US intervention in the case of European attempts to colonise the Americas, but stay out of European affairs. Strengthening our role as peacekeepers on these continents will improve our influence in the region."
 USA_carribean_sphere:0 "Caribbean Sphere"
-USA_carribean_sphere_desc:0 "The Caribbean islands offer the perfect location to launch strikes against our Eastern coast or the Panama canal, so of course we must make it clear that no hostile takeovers of the area will be permitted."
+USA_carribean_sphere_desc:0 "The Caribbean islands offer the perfect location to launch strikes against our Eastern coast or the Panamá canal, so of course we must make it clear that no hostile takeovers of the area will be permitted."
 USA_central_america:0 "Central America"
-USA_central_america_desc:0 "It would be unthinkable to let any foreign power take control of, or even be able to threaten, the Panama canal. As such, we shall guarantee the independence of all the Central American nations."
+USA_central_america_desc:0 "It would be unthinkable to let any foreign power take control of, or even be able to threaten, the Panamá canal. As such, we shall guarantee the independence of all the Central American nations."
 USA_the_neighbors:0 "The Neighbours"
 USA_the_neighbors_desc:0 "We must first and foremost see to the safety of the countries closest to us. Rather than having the enemy cross our neighbours to get to us, they'll cross us if they cross our neighbours."
 USA_south_america:0 "South America"
