--- a/localisation/goals_l_english.yml
+++ b/localisation/goals_l_english.yml
@@ -100,9 +100,9 @@ invade_australia_short_desc:0 "§LLaunch a full-scale invasion of Australia.§"
 secure_the_pacific:0 "Secure the Pacific"
 secure_the_pacific_desc:0 "American bases throughout the Pacific must be seized, to diminish the force projection capability of their fleet inside our territory. The Imperial Navy General Staff have identified several islands which must be occupied, including the main base of the US Pacific Fleet at Hawaii."
 secure_the_pacific_short_desc:0 "§LOccupy key American islands to secure control over the Pacific.§"
-close_panama_canal:0 "Close the Panama Canal"
-close_panama_canal_desc:0 "The Americans rely on the Panama Canal to transfer naval assets between their west and east coasts, and this is their weakness! We must seize the Galapagos Islands to establish a forward base, and then land forces in Panama to close the canal. For the Emperor!"
-close_panama_canal_short_desc:0 "§LOccupy the Panama Canal to deny its use to the Americans.§"
+close_panama_canal:0 "Close the Panamá Canal"
+close_panama_canal_desc:0 "The Americans rely on the Panamá Canal to transfer naval assets between their west and east coasts, and this is their weakness! We must seize the Galapagos Islands to establish a forward base, and then land forces in Panamá to close the canal. For the Emperor!"
+close_panama_canal_short_desc:0 "§LOccupy the Panamá Canal to deny its use to the Americans.§"
 invasion_of_alaska:0 "The Invasion of Alaska"
 invasion_of_alaska_desc:0 "The northern approaches to the Home Islands must be secured by occupying the Aleutian Islands. Control of these islands will further enable us to establish a foothold in North America by invading Alaska. The remoteness of this region should make it difficult for the Americans to reinforce."
 invasion_of_alaska_short_desc:0 "§LInvade and occupy American territory in Alaska.§"
