--- a/localisation/KR_American_Civil_War_l_english.yml
+++ b/localisation/KR_American_Civil_War_l_english.yml
@@ -114,12 +114,12 @@ amcivwar.14.b:0 "Rather not"
 amcivwar.15.t:0 "Japan Seizes Guam"
 amcivwar.15.d:0 "With America in turmoil, Japan has moved onto the island of Guam. There is very little that the US government can do to stop Japan at this point."
 amcivwar.15.a:0 "Too bad"
-amcivwar.16.t:0 "The Panama Canal"
-amcivwar.16.d:0 "The civil war has erupted in the United states, tearing apart the last shreds of unity in the Union. This present us with opportunity to seize the strategically important Panama Canal for ourselves. There is very little that the US government can do to stop us at this point."
-amcivwar.16.a:0 "Seize the Panama canal!"
+amcivwar.16.t:0 "The Panamá Canal"
+amcivwar.16.d:0 "The civil war has erupted in the United states, tearing apart the last shreds of unity in the Union. This present us with opportunity to seize the strategically important Panamá Canal for ourselves. There is very little that the US government can do to stop us at this point."
+amcivwar.16.a:0 "Seize the Panamá canal!"
 amcivwar.16.b:0 "Rather not"
-amcivwar.17.t:0 "Canada Seizes the Panama Canal"
-amcivwar.17.d:0 "With America in turmoil, Canada has seized the Panama Canal to ensure that it stays open for travel. Canada has promised to keep the canal open to all traffic and respect America's claim to it."
+amcivwar.17.t:0 "Canada Seizes the Panamá Canal"
+amcivwar.17.d:0 "With America in turmoil, Canada has seized the Panamá Canal to ensure that it stays open for travel. Canada has promised to keep the canal open to all traffic and respect America's claim to it."
 amcivwar.17.a:0 "Too bad"
 amcivwar.18.t:0 "Pacific States of America Independence"
 amcivwar.18.d:0 "When the Pacific States of America declared its independence from the United States there were many in the new country who wanted to see a war to ensure the security and prosperity of the west coast. A war would be dangerous as the United States would not go quietly into the night."
@@ -483,7 +483,7 @@ amcivwar.163.d:0 "Fearing for their own safety, as the main cities of our republ
 amcivwar.163.a:0 "There is nothing that we can do"
 amcivwar.163.b:0 "We must resist, reinforce our positions near Pearl Harbour"
 amcivwar.164.t:0 "The fate of Puerto Rico"
-amcivwar.164.d:0 "With the East Coast and the Panama Canal out of our control, we must decide on the fate of Puerto Rico. The most reasonable option is to give to the Entante, but it is feared that such an act will cause additional dissent in our already desperate population."
+amcivwar.164.d:0 "With the East Coast and the Panamá Canal out of our control, we must decide on the fate of Puerto Rico. The most reasonable option is to give to the Entante, but it is feared that such an act will cause additional dissent in our already desperate population."
 amcivwar.164.a:0 "Give it to the Entente"
 amcivwar.164.b:0 "Fortify the island"
 amcivwar.165.t:0 "Puerto Rico given to the Entente"
@@ -637,11 +637,11 @@ amcivwar.204.a:0 "We are not enemies, but friends. Full reintegration"
 amcivwar.204.b:0 "Establish provisional State governments of loyal citizens"
 amcivwar.204.c:0 "Military control must be maintained; the occupation continues"
 amcivwar.205.t:0 "Our place in the sun"
-amcivwar.205.d:0 "The occupation of American overseas territory by foreign powers during the Civil War was an affront to the United States. The establishment of Canadian authority over the Panama Canal Zone, however, was a provocation that could not be overlooked. The victorious government now looked to restore those lands seized by their neighbour to the north."
+amcivwar.205.d:0 "The occupation of American overseas territory by foreign powers during the Civil War was an affront to the United States. The establishment of Canadian authority over the Panamá Canal Zone, however, was a provocation that could not be overlooked. The victorious government now looked to restore those lands seized by their neighbour to the north."
 amcivwar.205.a:0 "Demand the return of the canal zone!"
 amcivwar.205.b:0 "Our concern is elsewhere"
 amcivwar.206.t:0 "The United States' request"
-amcivwar.206.d:0 "The victorious government of the United States has requested we return control of the Panama Canal back to them."
+amcivwar.206.d:0 "The victorious government of the United States has requested we return control of the Panamá Canal back to them."
 amcivwar.206.a:0 "We must comply"
 amcivwar.206.b:0 "They'll get over it"
 amcivwar.207.t:0 "The United States' request"
