--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -24,7 +24,7 @@ GER_global2:0 "Expand Singapore Harbour"
 GER_global2_desc:0 ""
 GER_global3:0 "Treaty with Hawaii"
 GER_global3_desc:0 ""
-GER_global4:0 "Occupy the Panama Canal"
+GER_global4:0 "Occupy the Panamá Canal"
 GER_global4_desc:0 ""
 GER_north_sea1:0 "Expand Wilhelmshaven"
 GER_north_sea1_desc:0 ""
