--- a/localisation/KR_United_Provinces_l_english.yml
+++ b/localisation/KR_United_Provinces_l_english.yml
@@ -1,20 +1,20 @@
 ﻿l_english:
 
 ### Events ###
-united.1.t:0 "The Panama Disease is killing the Banana Crop"
-united.1.d:0 "The United Provinces, the leading Banana exporter has been struck by whats being called 'The Panama Disease'. It is a fungus attacks the roots of the banana plant and kills it, and without our Banana exports we're nothing. The Communards are licking their chops, waiting for an economic crisis to seize power. We've got to find a way to stop this outbreak before Bananas aren't the only thing dying in masses. We can try to invest in a new crop, use more fungicide or develop new Cultivars, or other species of the Banana."
+united.1.t:0 "The Panamá Disease is killing the Banana Crop"
+united.1.d:0 "The United Provinces, the leading Banana exporter has been struck by whats being called 'The Panamá Disease'. It is a fungus attacks the roots of the banana plant and kills it, and without our Banana exports we're nothing. The Communards are licking their chops, waiting for an economic crisis to seize power. We've got to find a way to stop this outbreak before Bananas aren't the only thing dying in masses. We can try to invest in a new crop, use more fungicide or develop new Cultivars, or other species of the Banana."
 united.1.a:0 "Order the farmers to grow new crops!"
 united.1.b:0 "Fungicide will kill this disease"
 united.1.c:0 "Develop new Cultivars that are immune to the fungus"
 united.2.t:0 "The New Economy of The United Provinces"
-united.2.d:0 "After the outbreak of the Panama disease, we forced the farmers to grow new crops, it was a tough choice but it seems the only way to keep the economy from collapsing. The transition will be slow, but the Panama Disease is an unsolvable problem."
+united.2.d:0 "After the outbreak of the Panamá disease, we forced the farmers to grow new crops, it was a tough choice but it seems the only way to keep the economy from collapsing. The transition will be slow, but the Panamá Disease is an unsolvable problem."
 united.2.a:0 "It will be a slow transition, but the United Provinces will endure!"
-united.3.t:0 "The Panama Disease is Immune to Fungicide"
-united.3.d:0 "After the outbreak of the Panama Disease, we tried to use fungicides to get rid of the outbreak, but the fungus seems to be immune."
+united.3.t:0 "The Panamá Disease is Immune to Fungicide"
+united.3.d:0 "After the outbreak of the Panamá Disease, we tried to use fungicides to get rid of the outbreak, but the fungus seems to be immune."
 united.3.a:0 "Well, there's nothing we can do now..."
 united.3.b:0 "Order the farmers to grow new crops!"
 united.4.t:0 "The New Cultivars aren't Immune"
-united.4.d:0 "After the outbreak of the Panama Disease, we tried to invent new Cultivars that were immune to the fungus, but they too have been struck."
+united.4.d:0 "After the outbreak of the Panamá Disease, we tried to invent new Cultivars that were immune to the fungus, but they too have been struck."
 united.4.a:0 "Well, there's nothing we can do now..."
 united.4.b:0 "Order the farmers to grow new crops!"
 united.5.t:0 "Centroamérica funding dissidents"
@@ -30,10 +30,10 @@ united.7.a:0 "Lets see what the Centroaméricans do"
 united.8.t:0 "Centroamérica Declares War!"
 united.8.d:0 "After their attack was beaten back, the Communards in Centroamérica have decided that they want to begin a total war with us. Perhaps it is time that we finally teach them a lesson"
 united.8.a:0 "To War!"
-united.9.t:0 "The government of Panama Collapses"
-united.9.d:0 "After the assassination of President Madrid, Panama collapsed into battles between Left-Wing guerrillas and government forces. We must secure Panama before the chaos spreads across our borders! The United States, which are attempting to halt spreading of syndicalism in Central America have promised us their support in this matter."
-united.9.a:0 "Occupy Panama, we must bring an end to the chaos"
+united.9.t:0 "The government of Panamá Collapses"
+united.9.d:0 "After the assassination of President Madrid, Panamá collapsed into battles between Left-Wing guerrillas and government forces. We must secure Panamá before the chaos spreads across our borders! The United States, which are attempting to halt spreading of syndicalism in Central America have promised us their support in this matter."
+united.9.a:0 "Occupy Panamá, we must bring an end to the chaos"
 united.9.b:0 "We mustn't interfere"
-united.10.t:0 "Panama joins the United Provinces"
-united.10.d:0 "Rather than fall to syndicalism, Panama has decided to become a part of the United Provinces."
+united.10.t:0 "Panamá joins the United Provinces"
+united.10.d:0 "Rather than fall to syndicalism, Panamá has decided to become a part of the United Provinces."
 united.10.a:0 "Excellent"
