--- a/localisation/KR_Companies_l_english.yml
+++ b/localisation/KR_Companies_l_english.yml
@@ -615,7 +615,7 @@ utva:0 "UTVA"
 rogozarski:0 "Rogožarski"
 aeroput:0 "Aeroput"
 
-### Companies ###
+### Siam ###
 chaiseri:0 "Chaiseri Metal & Rubber"
 thairung:0 "Thairung"
 bangkok_dock:0 "Bangkok Dock Company"
@@ -920,3 +920,35 @@ ikarus:0 "Ikarus"
 utva:0 "UTVA"
 rogozarski:0 "Rogožarski"
 aeroput:0 "Aeroput"
+
+### Romania ###
+malaxa:0 "Malaxa"
+universitatea_bucuresti:0 "Universitatea din Bucuresti"
+rafinaria_steaua_romana:0 "Rafinaria Steaua Romana"
+fabrica_de_arme_cugir:0 "Fabrica de Arme Cugir"
+udr:0 "UDR"
+caile_ferate_romane:0 "Caile Ferate Romane"
+leonida:0 "Leonida"
+industria_aeronautica_romana:0 "Industria Aeronautică Română"
+icar:0 "ICAR"
+fabrica_avioane_set:0 "Fabrica de Avioane SET"
+santierul_naval_constanta:0 "Şantierul Naval Constanţa"
+rrm_malaxa:0 "Malaxa"
+rrm_universitatea_bucuresti:0 "Universitatea din Bucuresti"
+rrm_rafinaria_steaua_romana:0 "Rafinaria Steaua Romana"
+rrm_fabrica_de_arme_cugir:0 "Fabrica de Arme Cugir"
+rrm_udr:0 "UDR"
+rrm_caile_ferate_romane:0 "Caile Ferate Romane"
+rrm_leonida:0 "Leonida"
+rrm_industria_aeronautica_romana:0 "Industria Aeronautică Română"
+rrm_icar:0 "ICAR"
+rrm_fabrica_avioane_set:0 "Fabrica de Avioane SET"
+rrm_santierul_naval_constanta:0 "Şantierul Naval Constanţa"
+
+### Transamur ###
+dalzavod_heavy_industries:0 "Dalzavod Heavy Industries"
+eastern_siberian_railway:0 "Eastern Siberian Railway"
+vladivostok_arsenals:0 "Vladivostok Arsenals"
+dalzavod_heavy_industries_tanks:0 "Dalzavod Tank Industries"
+dalzavod_aircraft_industries:0 "Dalzavod Aircraft Industries"
+dalzavod_naval_industries:0 "Dalzavod Naval Industries"
