Onwards to completion!

--- a/localisation/KR_Egypt_l_english.yml
+++ b/localisation/KR_Egypt_l_english.yml
@@ -38,6 +38,9 @@ egy_kurds:0 "Axis intervention"
 
 ### Ideas ###
 
+egy_jerusalem_bonus:0 "Treaty of Jerusalem"
+egy_damascus_bonus:0 "Treaty of Damascus"
+
 ### Parties ###
 
 ### Foci ###
