--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -63,6 +63,7 @@ OTT_camel_corpse_effect:0 "Enables §HImperial Camel Corps§!\n§HCavalry\n    D
 OTT_desert_tt:0 "§ROttoman Desert Corps will help us control desert areas better.§!\n"
 OTT_german_approval_tt:0 "§RThe German Empire needs to agree§!\n"
 ott_opda_flag_tt:0 "§RWe need to get rid of the OPDA before we can make investments§!\n"
+ott_opda_end_tt:0 "§GEconomy, Air Force and Navy focuses are now unlocked!§!\n"
 OTT_theorists_unlocked_tt:0 "\n§GTheorists unlocked§!\n"
 OTT_uzel_unlocked_tt:0 "§GUzel unlocked§!\n"
 OTT_sarsilmaz_unlocked_tt:0 "§GSarsılmaz unlocked§!\n"
@@ -661,7 +662,7 @@ ott.80.d:0 "The Germans have approved the deal! It was not cheap, but we finally
 ott.80.a:0 "To the skies!"
 
 ott.81.t:0 "German Air Designs"
-ott.81.d:0 "The German government has refused the deal! Even though we reached an agreement with the aircraft manufacturers, the barbaric German government refused to allow the trade. This is an unexpected setback for our air program."
+ott.81.d:0 "The German government has rejected the deal! Even though we had reached an agreement with the manufacturers, the barbaric German government refused to allow the trade. This is an unexpected setback for our aircraft program."
 ott.81.a:0 "We don't need their flying trashcans anyway..."
 
 ott.82.t:0 "Black Sea Naval Supremacy"
